@@ -1,8 +1,18 @@
-2022-07-06  Charlie Zender  <zender@uci.edu>
+2022-07-07  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
+
+	* Pass unknown IDs through to invocation execution
+
+	* Build cmp_sng_glb with filter ID as name when filter is unknown
+
+	* Build nco_cdc_lst_glb using mostly nc_inq_filter_avail()
+
+	* Tidy Blosc support
+
+2022-07-06  Charlie Zender  <zender@uci.edu>
 
 	* Realize that Blosc fails on benchmark EAM file, succeeds on simpler files, unsure why
 
